integration swagger of get all doctors
