# app/Http/Controllers/Admin/AdminDoctorController.php
@@ -3,21 +3,9 @@
 namespace App\Http\Controllers\Admin;
 
 use App\Repositories\DoctorRepository;
-use App\Dtos\Admin\DoctorRes;
 use App\Http\Controllers\Controller;
+use App\Dtos\Admin\DoctorRes;
 
-/**
- * @OA\Get(
- *     path="/api/doctors",
- *     summary="Get all doctors",
- *     tags={"Doctors"},
- *     @OA\Response(
- *         response=200,
- *         description="Successful operation"
- *     ),
- *     @OA\Response(response=401, description="Unauthenticated"),
- * )
- */
 
 class AdminDoctorController extends Controller
 {
@@ -28,6 +16,32 @@ class AdminDoctorController extends Controller
         $this->doctorRepository = new DoctorRepository();
     }
 
+    /**
+ * @OA\Get(
+ *     path="/Admin/getAllDoctor",
+ *     operationId="getAllDoctors",
+ *     tags={"Doctors"},
+ *     summary="Get all doctors",
+ *     description="Retrieve a list of all doctors from the database",
+ *     @OA\Response(
+ *         response=200,
+ *         description="A list of doctors",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(
+ *                 property="message",
+ *                 type="string",
+ *                 example="Successfully"
+ *             ),
+ *             @OA\Property(
+ *                 property="payload",
+ *                 type="array",
+ *                 @OA\Items(ref="#/components/schemas/DoctorRes")
+ *             )
+ *         )
+ *     )
+ * )
+ */
     public function getAllDoctors()
     {
         $doctors = $this->doctorRepository->queryAllDoctors();
@@ -40,10 +54,11 @@ class AdminDoctorController extends Controller
                 $doctor->getMajor(),
                 $doctor->user->getEmail(),
                 $doctor->user->getPassword(),
+                $doctor->user->getFullName(),
                 $doctor->user->getAddress(),
                 $doctor->user->getPhone(),
                 $doctor->user->getUrlImage(),
-                $doctor->user->getStatus()
+                $doctor->user->getStatus() == null ? "1" :"null"
             );
         }
 
